# fastText

./: .gitignore  .npmignore  CMakeLists.txt  Makefile  Package.swift  README.md  package-lock.json  package.json  pyproject.toml  setup.py  wikifil.pl
.buildkite/: pipeline.yaml
.devcontainer/: devcontainer.json
.github/workflows/: c_api_linux.yml  wasm-ci.yml  wasm-npm-publish.yml  wasm.yml
nuget/: FastText.Native.Linux.nuspec  FastText.Native.MacOs.nuspec  FastText.Native.Windows.nuspec
profanity/: de.txt  en.txt  es.txt  it.txt  pt.txt
python/fastText/: FastText.py
python/fastText/pybind/: fasttext_pybind.cc
python/fasttext_module/fasttext/: FastText.py
python/fasttext_module/fasttext.egg-info/: PKG-INFO  SOURCES.txt
python/fasttext_module/fasttext/pybind/: fasttext_pybind.cc
python/floret_module/floret/pybind/: floret_pybind.cc
src/: args.cc  args.h  autotune.cc  autotune.h  catch.h  densematrix.cc  densematrix.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  fasttext_api.cc  fasttext_api.h  fasttext_api_test.cc  language.cc  language.h  loss.cc  main.cc  matrix.h  meter.h  model.cc  model.h  productquantizer.cc  productquantizer.h  quantmatrix.cc  quantmatrix.h  real.h  utils.cc  vector.cc
stopwords/: en.txt  fr.txt
swift/Sources/CFastText/: CFastText.cpp
swift/Sources/SFastText/: SFastText.swift
tests/: fetch_cooking.sh
webassembly/: fasttext.js  fasttext_node.js  package-lock.json  package.json  test.js
